build: replace desktop webview and remove unused repositories